corrected autocomplete not showing on bootstrap modal

--- a/src/WebUI/ClientApp/src/styles.css
+++ b/src/WebUI/ClientApp/src/styles.css
@@ -18,3 +18,7 @@ code {
 .pantalla-title {
   font-size: 1.5rem;
 }
+
+.pac-container {
+  z-index: 10000 !important;
+}
